--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -460,6 +460,12 @@
              <property name="text">
               <string>TextLabel</string>
              </property>
+             <property name="wordWrap">
+              <bool>true</bool>
+             </property>
+             <property name="textInteractionFlags">
+              <set>Qt::LinksAccessibleByMouse|Qt::TextEditable|Qt::TextSelectableByMouse</set>
+             </property>
             </widget>
            </item>
            <item row="1" column="0">
@@ -566,6 +572,9 @@
            </item>
            <item row="4" column="1">
             <widget class="QPushButton" name="pushButton_4">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="font">
               <font>
                <pointsize>15</pointsize>
@@ -626,12 +635,6 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>300</height>
-             </size>
-            </property>
             <column>
              <property name="text">
               <string>设备MAC地址</string>
@@ -668,7 +671,7 @@
              </font>
             </property>
             <property name="text">
-             <string>包名称：</string>
+             <string>包名称:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -683,7 +686,7 @@
              </font>
             </property>
             <property name="text">
-             <string>目标版本：</string>
+             <string>目标版本:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -698,7 +701,7 @@
              </font>
             </property>
             <property name="text">
-             <string>目标总数：</string>
+             <string>目标总数:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -713,7 +716,7 @@
              </font>
             </property>
             <property name="text">
-             <string>已完成数：</string>
+             <string>已完成数:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -728,7 +731,7 @@
              </font>
             </property>
             <property name="text">
-             <string>已耗时：</string>
+             <string>已耗时:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -765,7 +768,7 @@
           <item>
            <widget class="QLabel" name="label_30">
             <property name="text">
-             <string>20220414YHsi</string>
+             <string>oy28_ota_file</string>
             </property>
            </widget>
           </item>
@@ -959,7 +962,7 @@
              </font>
             </property>
             <property name="text">
-             <string>未完成数：</string>
+             <string>平均速度：</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
