添加自动扫描，自动重连，白名单快速连接功能

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,6 +41,7 @@
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>30</pointsize>
             <bold>true</bold>
            </font>
@@ -63,6 +64,7 @@
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -81,6 +83,7 @@
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -90,6 +93,7 @@
          <widget class="QLabel" name="label_3">
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -108,6 +112,7 @@
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -120,6 +125,7 @@
          <widget class="QLabel" name="label_4">
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -138,6 +144,7 @@
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -169,6 +176,7 @@
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>15</pointsize>
            </font>
           </property>
@@ -191,6 +199,7 @@
          <widget class="QLabel" name="label_5">
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>12</pointsize>
            </font>
           </property>
@@ -230,12 +239,13 @@
          <widget class="QPushButton" name="pushButton_2">
           <property name="minimumSize">
            <size>
-            <width>150</width>
+            <width>350</width>
             <height>50</height>
            </size>
           </property>
           <property name="font">
            <font>
+            <family>Microsoft YaHei UI</family>
             <pointsize>12</pointsize>
            </font>
           </property>
@@ -255,7 +265,8 @@
          <widget class="QLabel" name="label_6">
           <property name="font">
            <font>
-            <pointsize>20</pointsize>
+            <family>Microsoft YaHei UI</family>
+            <pointsize>18</pointsize>
            </font>
           </property>
           <property name="text">
@@ -270,17 +281,30 @@
             <number>70</number>
            </property>
            <property name="verticalSpacing">
-            <number>37</number>
+            <number>50</number>
+           </property>
+           <property name="bottomMargin">
+            <number>31</number>
            </property>
            <item row="0" column="0">
             <widget class="QLabel" name="label_7">
+             <property name="minimumSize">
+              <size>
+               <width>212</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
              <property name="text">
-              <string>OTA包名称：</string>
+              <string>OTA包名称:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -288,6 +312,7 @@
             <widget class="QLabel" name="label_11">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -298,13 +323,23 @@
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_8">
+             <property name="minimumSize">
+              <size>
+               <width>212</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
              <property name="text">
-              <string>OTA包大小：</string>
+              <string>OTA包大小:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -312,6 +347,7 @@
             <widget class="QLabel" name="label_12">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -322,13 +358,20 @@
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_9">
+             <property name="minimumSize">
+              <size>
+               <width>212</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
              <property name="text">
-              <string>下载速度：</string>
+              <string>下载速度:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -339,6 +382,7 @@
             <widget class="QLabel" name="label_13">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -349,13 +393,20 @@
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_10">
+             <property name="minimumSize">
+              <size>
+               <width>212</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
              <property name="text">
-              <string>下载进度：</string>
+              <string>下载进度:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -366,6 +417,7 @@
             <widget class="QLabel" name="label_14">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -374,39 +426,41 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
-            <widget class="QPushButton" name="pushButton_8">
-             <property name="minimumSize">
-              <size>
-               <width>112</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="font">
-              <font>
-               <pointsize>15</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>下一步</string>
-             </property>
-            </widget>
-           </item>
            <item row="4" column="0">
             <widget class="QPushButton" name="pushButton_7">
              <property name="minimumSize">
               <size>
-               <width>112</width>
+               <width>212</width>
                <height>0</height>
               </size>
              </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
              <property name="text">
               <string>上一步</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QPushButton" name="pushButton_8">
+             <property name="minimumSize">
+              <size>
+               <width>212</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Microsoft YaHei UI</family>
+               <pointsize>15</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>下一步</string>
              </property>
             </widget>
            </item>
@@ -439,6 +493,7 @@
              </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -454,6 +509,7 @@
             <widget class="QLabel" name="label_19">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -475,6 +531,7 @@
              </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -490,6 +547,7 @@
             <widget class="QLabel" name="label_20">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -505,6 +563,7 @@
              </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -518,8 +577,15 @@
            </item>
            <item row="2" column="1">
             <widget class="QLineEdit" name="lineEdit_4">
+             <property name="maximumSize">
+              <size>
+               <width>227</width>
+               <height>16777215</height>
+              </size>
+             </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -535,6 +601,7 @@
              </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -550,6 +617,7 @@
             <widget class="QLabel" name="label_21">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -568,6 +636,7 @@
              </property>
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -580,6 +649,7 @@
             <widget class="QPushButton" name="pushButton_4">
              <property name="font">
               <font>
+               <family>Microsoft YaHei UI</family>
                <pointsize>15</pointsize>
               </font>
              </property>
@@ -610,6 +680,7 @@
            <widget class="QLabel" name="label_22">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -642,6 +713,7 @@
            <widget class="QLabel" name="label_23">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -658,6 +730,7 @@
            <widget class="QLabel" name="label_24">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -673,6 +746,7 @@
            <widget class="QLabel" name="label_25">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -688,6 +762,7 @@
            <widget class="QLabel" name="label_26">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -703,6 +778,7 @@
            <widget class="QLabel" name="label_27">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -718,6 +794,7 @@
            <widget class="QLabel" name="label_28">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -759,7 +836,10 @@
           <item>
            <widget class="QLabel" name="label_30">
             <property name="text">
-             <string>oy28_ota_file</string>
+             <string>TextLabel</string>
+            </property>
+            <property name="wordWrap">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -822,6 +902,7 @@
            <widget class="QLabel" name="label_29">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -874,6 +955,7 @@
            <widget class="QLabel" name="label_35">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -889,6 +971,7 @@
            <widget class="QLabel" name="label_36">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -904,6 +987,7 @@
            <widget class="QLabel" name="label_37">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -919,6 +1003,7 @@
            <widget class="QLabel" name="label_41">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -934,6 +1019,7 @@
            <widget class="QLabel" name="label_42">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -949,6 +1035,7 @@
            <widget class="QLabel" name="label_43">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -964,6 +1051,7 @@
            <widget class="QLabel" name="label_44">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -979,6 +1067,7 @@
            <widget class="QLabel" name="label_45">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -994,6 +1083,7 @@
            <widget class="QPushButton" name="pushButton_9">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
@@ -1009,7 +1099,7 @@
           <item>
            <widget class="QLabel" name="label_39">
             <property name="text">
-             <string>oy28_ota_file</string>
+             <string>TextLabel</string>
             </property>
            </widget>
           </item>
@@ -1066,6 +1156,7 @@
            <widget class="QPushButton" name="pushButton_10">
             <property name="font">
              <font>
+              <family>Microsoft YaHei UI</family>
               <pointsize>12</pointsize>
              </font>
             </property>
