--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -553,7 +553,7 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
+           <item row="3" column="0">
             <widget class="QLabel" name="label_17">
              <property name="minimumSize">
               <size>
@@ -575,7 +575,7 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="3" column="1">
             <widget class="QLineEdit" name="lineEdit_4">
              <property name="maximumSize">
               <size>
@@ -589,9 +589,12 @@
                <pointsize>15</pointsize>
               </font>
              </property>
+             <property name="placeholderText">
+              <string>待升级的总设备数</string>
+             </property>
             </widget>
            </item>
-           <item row="3" column="0">
+           <item row="4" column="0">
             <widget class="QLabel" name="label_18">
              <property name="minimumSize">
               <size>
@@ -613,7 +616,7 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
+           <item row="4" column="1">
             <widget class="QLabel" name="label_21">
              <property name="font">
               <font>
@@ -626,7 +629,7 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
+           <item row="5" column="0">
             <widget class="QPushButton" name="pushButton_3">
              <property name="minimumSize">
               <size>
@@ -645,7 +648,7 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
+           <item row="5" column="1">
             <widget class="QPushButton" name="pushButton_4">
              <property name="font">
               <font>
@@ -655,6 +658,47 @@
              </property>
              <property name="text">
               <string>开始OTA升级</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_51">
+             <property name="minimumSize">
+              <size>
+               <width>227</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Microsoft YaHei UI</family>
+               <pointsize>15</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>蓝牙匹配词:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLineEdit" name="lineEdit_5">
+             <property name="maximumSize">
+              <size>
+               <width>227</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Microsoft YaHei UI</family>
+               <pointsize>15</pointsize>
+              </font>
+             </property>
+             <property name="placeholderText">
+              <string>蓝牙名称的关键词</string>
              </property>
             </widget>
            </item>
