--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -587,6 +587,47 @@
              </property>
             </widget>
            </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_51">
+             <property name="minimumSize">
+              <size>
+               <width>227</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Microsoft YaHei UI</family>
+               <pointsize>15</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>蓝牙匹配词:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLineEdit" name="lineEdit_5">
+             <property name="maximumSize">
+              <size>
+               <width>227</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Microsoft YaHei UI</family>
+               <pointsize>15</pointsize>
+              </font>
+             </property>
+             <property name="placeholderText">
+              <string>蓝牙名称的关键词</string>
+             </property>
+            </widget>
+           </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_17">
              <property name="minimumSize">
@@ -633,6 +674,9 @@
            </item>
            <item row="4" column="0">
             <widget class="QLabel" name="label_18">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>227</width>
@@ -646,23 +690,10 @@
               </font>
              </property>
              <property name="text">
-              <string>当前蓝牙适配器:</string>
+              <string>是否忽略版本号比较:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1">
-            <widget class="QLabel" name="label_21">
-             <property name="font">
-              <font>
-               <family>Microsoft YaHei UI</family>
-               <pointsize>15</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>TextLabel</string>
              </property>
             </widget>
            </item>
@@ -698,44 +729,16 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_51">
-             <property name="minimumSize">
-              <size>
-               <width>227</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="font">
-              <font>
-               <family>Microsoft YaHei UI</family>
-               <pointsize>15</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>蓝牙匹配词:</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QLineEdit" name="lineEdit_5">
+           <item row="4" column="1">
+            <widget class="QCheckBox" name="checkBox">
              <property name="maximumSize">
               <size>
-               <width>227</width>
-               <height>16777215</height>
+               <width>16777215</width>
+               <height>24</height>
               </size>
              </property>
-             <property name="font">
-              <font>
-               <family>Microsoft YaHei UI</family>
-               <pointsize>15</pointsize>
-              </font>
-             </property>
-             <property name="placeholderText">
-              <string>蓝牙名称的关键词</string>
+             <property name="text">
+              <string>是</string>
              </property>
             </widget>
            </item>
